--- a/app/src/main/res/layout/fragment_anadir_inventario.xml
+++ b/app/src/main/res/layout/fragment_anadir_inventario.xml
@@ -4,117 +4,179 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="clickBtnInsertar"
     tools:context=".ui.añadirInventario.AnadirInventarioFragment">
 
-
-    <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="@string/placeholder_nombre_almacen"
-        android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="@string/placeholder_dirección_almacen"
-        android:inputType="text"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.304" />
+        app:layout_constraintVertical_bias="0">
 
-    <EditText
-        android:id="@+id/editTextText4"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="Estado"
-        android:text ="1"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:longClickable="true"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-    <EditText
-        android:id="@+id/editTextText3"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="@string/placeholder_usuario_responsable"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.654" />
+            <TextView
+                android:id="@+id/tvIdAlmacen"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="120dp"
+                android:layout_marginVertical="30dp"
+                android:enabled="false"
+                android:text="@string/textView_id_almacen"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_send"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+            <EditText
+                android:id="@+id/etIdAlmacen"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="175dp"
+                android:enabled="false"
+                android:gravity="center"
+                android:inputType="number"
+                android:textColor="@color/color_list"
+                android:textColorHint="@color/color_list"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                tools:hint="@string/placeholder_id_almacen" />
 
-    <TextView
-        android:id="@+id/tvNombreAlmacen"
-        android:layout_width="167dp"
-        android:layout_height="20dp"
-        android:textStyle="bold"
-        android:text="@string/textView_nombre_almacen"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tvAlmacen"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="130dp"
+                android:layout_marginVertical="30dp"
+                android:text="@string/textView_nombre_almacen"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tvDireccionAlmacen"
-        android:layout_width="167dp"
-        android:layout_height="20dp"
-        android:textStyle="bold"
-        android:text="@string/textView_direccion_almacen"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+            <EditText
+                android:id="@+id/etNombreAlmacen"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="60dp"
+                android:hint="@string/placeholder_nombre_almacen"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:textColorHint="@color/color_list"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tvNEstadoAlmacen"
-        android:layout_width="167dp"
-        android:layout_height="20dp"
-        android:textStyle="bold"
-        android:text="@string/textView_estado_almacen"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
-        app:layout_constraintVertical_bias="0.483" />
+            <TextView
+                android:id="@+id/tvDireccionAlmacen"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="130dp"
+                android:layout_marginVertical="30dp"
+                android:text="@string/textView_direccion_almacen"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tvIdUsuario"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:textStyle="bold"
-        android:text="@string/textView_id_usuario_responsable"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
+            <EditText
+                android:id="@+id/etDireccionAlmacen"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="60dp"
+                android:hint="@string/placeholder_dirección_almacen"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:textColorHint="@color/color_list"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/tvEstadoAlmacen"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="130dp"
+                android:layout_marginVertical="30dp"
+                android:text="@string/textView_estado_almacen"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingHorizontal="70dp"
+                android:layout_marginHorizontal="30dp">
+
+                <EditText
+                    android:id="@+id/etEstadoAlmacen"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="30dp"
+                    android:enabled="false"
+                    android:gravity="center"
+                    android:hint="@string/placeholder_estado_almacen"
+                    android:inputType="text"
+                    android:text="@string/placeholder_estado_almacen"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/color_list"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <CheckBox
+                    android:id="@+id/cbActividad"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/CheckBox"
+                    android:checked="true"
+                    />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+            <TextView
+                android:id="@+id/tvIdUsuarioResponsable"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="110dp"
+                android:layout_marginVertical="30dp"
+                android:text="@string/textView_id_usuario_responsable"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/etIdUsuarioResponsable"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="175dp"
+                android:gravity="center"
+                android:hint="@string/placeholder_usuario_responsable"
+                android:inputType="number"
+                android:textColorLink="@color/color_list"
+                android:textColor="@color/black"
+                android:textColorHint="@color/color_list"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="150dp"
+                android:layout_marginVertical="40dp"
+                android:text="@string/button_send" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
