--- a/app/src/main/res/layout/fragment_anadir_inventario.xml
+++ b/app/src/main/res/layout/fragment_anadir_inventario.xml
@@ -7,8 +7,8 @@
     tools:context=".ui.añadirInventario.AnadirInventarioFragment">
 
     <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,41 +21,17 @@
             android:clickable="true"
             android:longClickable="true"
             android:orientation="vertical"
+            android:focusableInTouchMode="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/tvIdAlmacen"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="120dp"
-                android:layout_marginVertical="30dp"
-                android:enabled="false"
-                android:text="@string/textView_id_almacen"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/etIdAlmacen"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginHorizontal="175dp"
-                android:enabled="false"
-                android:gravity="center"
-                android:inputType="number"
-                android:textColor="@color/color_list"
-                android:textColorHint="@color/color_list"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                tools:hint="@string/placeholder_id_almacen" />
 
             <TextView
                 android:id="@+id/tvAlmacen"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="130dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="110dp"
                 android:layout_marginVertical="30dp"
                 android:text="@string/textView_nombre_almacen"
                 android:textColor="@color/black"
@@ -64,11 +40,13 @@
 
             <EditText
                 android:id="@+id/etNombreAlmacen"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginHorizontal="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="90dp"
+                android:gravity="center"
                 android:hint="@string/placeholder_nombre_almacen"
                 android:inputType="text"
+                android:backgroundTint="@color/color_list"
                 android:textColor="@color/black"
                 android:textColorHint="@color/color_list"
                 android:textSize="15sp"
@@ -76,9 +54,9 @@
 
             <TextView
                 android:id="@+id/tvDireccionAlmacen"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="130dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="110dp"
                 android:layout_marginVertical="30dp"
                 android:text="@string/textView_direccion_almacen"
                 android:textColor="@color/black"
@@ -87,92 +65,65 @@
 
             <EditText
                 android:id="@+id/etDireccionAlmacen"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginHorizontal="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="90dp"
                 android:hint="@string/placeholder_dirección_almacen"
+                android:backgroundTint="@color/color_list"
                 android:inputType="text"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:textColorHint="@color/color_list"
                 android:textSize="15sp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvEstadoAlmacen"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="130dp"
-                android:layout_marginVertical="30dp"
-                android:text="@string/textView_estado_almacen"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingHorizontal="70dp"
-                android:layout_marginHorizontal="30dp">
-
-                <EditText
-                    android:id="@+id/etEstadoAlmacen"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="30dp"
-                    android:enabled="false"
-                    android:gravity="center"
-                    android:hint="@string/placeholder_estado_almacen"
-                    android:inputType="text"
-                    android:text="@string/placeholder_estado_almacen"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/color_list"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <CheckBox
-                    android:id="@+id/cbActividad"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/CheckBox"
-                    android:checked="true"
-                    />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
 
 
             <TextView
                 android:id="@+id/tvIdUsuarioResponsable"
-                android:layout_width="210dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginHorizontal="110dp"
                 android:layout_marginVertical="30dp"
-                android:text="@string/textView_id_usuario_responsable"
+                android:text="@string/textView_usuario_responsable"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/etIdUsuarioResponsable"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginHorizontal="175dp"
-                android:gravity="center"
-                android:hint="@string/placeholder_usuario_responsable"
-                android:inputType="number"
-                android:textColorLink="@color/color_list"
-                android:textColor="@color/black"
-                android:textColorHint="@color/color_list"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:focusableInTouchMode="true">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/ListaDesplegable"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="70dp"
+                    style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/tvholaMundo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Opciones"
+                        android:text="@string/item_label"
+                        android:inputType="none"/>
+
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="110dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="150dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="160dp"
                 android:layout_marginVertical="40dp"
                 android:text="@string/button_send" />
+
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
