--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:id="@+id/fragment_home"
+    tools:context=".ui.inicio.InicioFragment">
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cream"
-    tools:context=".ui.inicio.InicioFragment">
+    android:background="@color/cream">
 
     <!-- MITAnto-->
     <TextView
@@ -112,7 +119,7 @@
     <!-- Letreros verdes -->
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvAddInventory"
+        android:id="@+id/cvAddData"
         android:layout_width="100dp"
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -139,7 +146,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/Add_data"
+                android:text="@string/Add_inventory"
                 android:textColor="@color/white"
                 android:gravity="center"/>
 
@@ -179,3 +186,4 @@
 
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
