--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,7 +16,7 @@
             android:icon="@drawable/ic_export_data"
             android:title="@string/menu_exportar_datos" />
         <item
-            android:id="@+id/nav_añadir_inventario"
+            android:id="@+id/nav_añadir_datos"
             android:icon="@drawable/ic_add_data"
             android:title="@string/Add_data" />
     </group>
