--- a/app/src/main/res/layout/fragment_anadir_transferencia.xml
+++ b/app/src/main/res/layout/fragment_anadir_transferencia.xml
@@ -198,7 +198,7 @@
                     android:text="@string/button_codigo_de_barra" />
 
                 <Button
-                    android:id="@+id/bAñadirNuevoProducto"
+                    android:id="@+id/bAnadirNuevoProducto"
                     android:layout_width="150dp"
                     android:layout_height="80dp"
                     android:layout_marginVertical="35dp"
