--- a/app/src/main/res/layout/item_precio_compra.xml
+++ b/app/src/main/res/layout/item_precio_compra.xml
@@ -33,6 +33,7 @@
             android:layout_marginStart="10dp"
             android:singleLine="true"
             android:maxLines="1"
+            android:gravity="center"
             android:imeOptions="actionDone"
             android:inputType="number"
             android:textSize="10sp"
