--- a/app/src/main/res/layout/fragment_camara.xml
+++ b/app/src/main/res/layout/fragment_camara.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline"
         android:backgroundTint="@color/light_green"/>
 
-    <Button
+   <!-- <Button
         android:id="@+id/buttonVolver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,6 +62,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintTop_toTopOf="@+id/guideline" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
