--- a/app/src/main/res/layout/fragment_elegir_producto.xml
+++ b/app/src/main/res/layout/fragment_elegir_producto.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="200dp"
             android:layout_marginStart="18dp"
-            android:background="@color/cream">
+            app:cardBackgroundColor="@color/cream">
 
 
             <ScrollView
@@ -30,7 +30,7 @@
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="match_parent"
                     android:background="@color/cream"
                     android:orientation="vertical">
 
@@ -40,11 +40,22 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="15dp"
+                        android:layout_marginBottom="10dp"
                         android:text="@string/title_elegir_producto"
+                        android:gravity="center"
                         android:textAllCaps="true"
                         android:textColor="@color/black"
                         android:textSize="12sp"
                         android:textStyle="bold" />
+
+                   <!-- <Button
+                        android:id="@+id/bEscanearCodigoDeBarra"
+                        android:layout_width="150dp"
+                        android:layout_height="80dp"
+                        android:layout_marginVertical="10dp"
+                        android:layout_gravity="center"
+                        android:backgroundTint="@color/light_green"
+                        android:text="@string/button_codigo_de_barra"/>-->
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
@@ -77,47 +88,28 @@
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <TextView
-                        android:id="@+id/tvElegirProveedor"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="15dp"
-                        android:text="@string/title_elegir_proveedor"
-                        android:textAllCaps="true"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:focusableInTouchMode="true"
-                        android:orientation="vertical">
+                        android:layout_gravity="center"
+                        android:layout_marginVertical="10dp"
+                        android:text="@string/textView_codigo_de_barra"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:id="@+id/ListaDesplegableElegirProveedor"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                            android:layout_width="300dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginHorizontal="40dp"
-                            android:layout_marginTop="15dp"
-                            android:textColorHint="@color/color_list">
+                    <EditText
+                        android:id="@+id/etCodigoDeBarra"
+                        android:layout_width="220dp"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="@color/color_list"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:hint="@string/placeholder_codigo_de_barra"
+                        android:textColor="@color/black"/>
 
-                            <AutoCompleteTextView
-                                android:id="@+id/tvListaDesplegableElegirProveedor"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/placeholder_dropdown"
-                                android:inputType="none"
-                                android:text="Eliga una opción"
-                                android:textColor="@color/black"
-                                android:textColorHint="@color/color_list" />
-
-
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-
-                    <Button
+                  <!--  <Button
                         android:id="@+id/bAnadirParametros"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -125,7 +117,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
                         android:backgroundTint="@color/light_green"
-                        android:text="Añadir parametros" />
+                        android:text="Añadir unidades de embalaje" /> -->
 
                     <LinearLayout
                         android:id="@+id/llUnidadesElegirProducto"
@@ -138,7 +130,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginTop="25dp"
+                            android:layout_marginTop="10dp"
                             android:backgroundTint="@color/color_list"
                             android:text="@string/button_unidades"
                             android:textColor="@color/black" />
@@ -164,7 +156,10 @@
                                 android:gravity="center"
                                 android:cursorVisible="true"
                                 android:focusable="true"
+                                android:hint="Unidades"
+                                android:textColorHint="@color/color_list"
                                 android:inputType="number"
+                                android:textColor="@color/black"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"/>
 
@@ -182,26 +177,6 @@
 
 
                         <!--Precio por unidad, Impuesto y Descuento -->
-
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="@string/title_precio_por_unidad"
-                                    android:textColor="@color/black" />
-
-                                <EditText
-                                    android:id="@+id/etPrecioPorUnidadUnidades"
-                                    android:layout_width="300dp"
-                                    android:hint="@string/hint_precio_por_unidad"
-                                    android:gravity="center"
-                                    android:inputType="number"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:layout_marginTop="10dp" />
-
-
 
                     </LinearLayout>
 
@@ -232,7 +207,9 @@
                                 android:layout_height="50dp"
                                 android:layout_marginStart="15dp"
                                 android:gravity="center"
+                                android:textColor="@color/black"
                                 android:hint="@string/numero_de_cajas"
+                                android:textColorHint="@color/color_list"
                                 android:inputType="number" />
 
                             <ImageView
@@ -248,48 +225,43 @@
                                 android:layout_height="50dp"
                                 android:layout_marginStart="15dp"
                                 android:gravity="center"
+                                android:textColor="@color/black"
                                 android:hint="@string/Articulos_por_caja"
+                                android:textColorHint="@color/color_list"
                                 android:inputType="number" />
 
                         </LinearLayout>
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="@string/title_precio_por_unidad"
-                                    android:textColor="@color/black" />
-
-                                <EditText
-                                    android:id="@+id/etPrecioPorUnidadCajasDeProductos"
-                                    android:layout_width="300dp"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:hint="@string/hint_precio_por_unidad"
-                                    android:layout_gravity="center"
-                                    android:layout_marginTop="10dp" />
-
                     </LinearLayout>
 
-                    <EditText
-                        android:id="@+id/etUbicacionInterna"
-                        android:layout_width="330dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="15dp"
-                        android:gravity="center"
-                        android:hint="@string/hint_ubicacion_interna" />
+                        android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/bAnadirFactura"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="25dp"
                         android:layout_marginBottom="15dp"
+                        android:layout_marginStart="20dp"
                         android:backgroundTint="@color/light_green"
                         android:text="@string/button_añadir_factura" />
 
+                        <Button
+                            android:id="@+id/bVolver"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="25dp"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginStart="30dp"
+                            android:backgroundTint="@color/orange"
+                            android:text="@string/back" />
+
+                    </LinearLayout>
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
             </ScrollView>
