--- a/app/src/main/res/layout/item_alert.xml
+++ b/app/src/main/res/layout/item_alert.xml
@@ -30,7 +30,7 @@
             android:id="@+id/etAlert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:gravity="center"
             android:singleLine="true"
             android:maxLines="1"
             android:imeOptions="actionDone"
