--- a/app/src/main/res/layout/item_precio_venta.xml
+++ b/app/src/main/res/layout/item_precio_venta.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:singleLine="true"
+            android:gravity="center"
             android:maxLines="1"
             android:imeOptions="actionDone"
             android:inputType="number"
